kafkaConnectDeployment/ibmCloudK8sIngress/configs/ingress-prod.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: hr-ingress
 annotations:
  # Maps the external paths that the services listen on, which is usually just `/`.
  # See https://cloud.ibm.com/docs/containers?topic=containers-ingress_annotation#rewrite-path
  # This makes it easier for us to have multiple exposed services on the same
  # domain.
  ingress.bluemix.net/rewrite-path: "serviceName=hr-product-api rewrite=/;serviceName=kafka-connect-standard rewrite=/;serviceName=hr-ciam rewrite=/;"
  ingress.bluemix.net/appid-auth: "bindSecret=binding-platformprodservicesappid namespace=default requestType=api serviceName=kafka-connect-standard"
  ingress.bluemix.net/client-max-body-size: "serviceName=hr-product-api size=200m; size=200m"
spec:
 tls:
 - hosts:
  # The domain and secret name can be retrieved with the command: `ibmcloud ks cluster get --cluster <cluster_name> | grep Ingress`
   - myplanet-platform-cluste.tor01.containers.appdomain.cloud
   secretName: myplanet-platform-cluste
 rules:
 - host: myplanet-platform-cluste.tor01.containers.appdomain.cloud
   http:
     paths:
     - path: /hr-product-api/ # Note: the trailing slash is important. (Without it, a request to `/hr-product-api/` will be mapped to `//`)
       backend:
         serviceName: hr-product-api # the load balancer
         servicePort: 8080 # this should match the node.js port
     - path: /kafka-connect/
       backend:
         serviceName: kafka-connect-standard
         servicePort: 80
     - path: /hr-ciam/
       backend:
         serviceName: hr-ciam
         servicePort: 8080 # this should match the node.js port
