kafkaConnectDeployment/ibmCloudK8sIngress/configs/ingress-staging.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: hr-ingress
 annotations:
  # Maps the external paths that the services listen on, which is usually just `/`.
  # See https://cloud.ibm.com/docs/containers?topic=containers-ingress_annotation#rewrite-path
  # This makes it easier for us to have multiple exposed services on the same
  # domain.
  ingress.bluemix.net/rewrite-path: "serviceName=hr-product-api rewrite=/;serviceName=kafka-connect-standard rewrite=/;serviceName=hr-ciam rewrite=/;"
  ingress.bluemix.net/appid-auth: "bindSecret=binding-platformdevservicesappid namespace=default requestType=api serviceName=kafka-connect-standard"
spec:
 tls:
 - hosts:
  # The domain and secret name can be retrieved with the command: `ibmcloud ks cluster get --cluster <cluster_name> | grep Ingress`
   - myplanet-cluster-dev.tor01.containers.appdomain.cloud
   secretName: myplanet-cluster-dev
 rules:
 - host: myplanet-cluster-dev.tor01.containers.appdomain.cloud
   http:
     paths:
     - path: /hr-product-api/ # Note: the trailing slash is important. (Without it, a request to `/hr-product-api/` will be mapped to `//`)
       backend:
         serviceName: hr-product-api # the load balancer
         servicePort: 8080 # this should match the node.js port
     - path: /kafka-connect/
       backend:
         serviceName: kafka-connect-standard # the load balancer
         servicePort: 80
     - path: /hr-ciam/
       backend:
         serviceName: hr-ciam # the load balancer
         servicePort: 8080 # this should match the node.js port
